v11/docs/ModelsCertificateDownloadResponse.md
# ModelsCertificateDownloadResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Content** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsCertificateDownloadResponse

`func NewModelsCertificateDownloadResponse() *ModelsCertificateDownloadResponse`

NewModelsCertificateDownloadResponse instantiates a new ModelsCertificateDownloadResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateDownloadResponseWithDefaults

`func NewModelsCertificateDownloadResponseWithDefaults() *ModelsCertificateDownloadResponse`

NewModelsCertificateDownloadResponseWithDefaults instantiates a new ModelsCertificateDownloadResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetContent

`func (o *ModelsCertificateDownloadResponse) GetContent() string`

GetContent returns the Content field if non-nil, zero value otherwise.

### GetContentOk

`func (o *ModelsCertificateDownloadResponse) GetContentOk() (*string, bool)`

GetContentOk returns a tuple with the Content field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetContent

`func (o *ModelsCertificateDownloadResponse) SetContent(v string)`

SetContent sets Content field to given value.

### HasContent

`func (o *ModelsCertificateDownloadResponse) HasContent() bool`

HasContent returns a boolean if a field has been set.

### SetContentNil

`func (o *ModelsCertificateDownloadResponse) SetContentNil(b bool)`

 SetContentNil sets the value for Content to be an explicit nil

### UnsetContent
`func (o *ModelsCertificateDownloadResponse) UnsetContent()`

UnsetContent ensures that no value is present for Content, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


